--- a/team6/index.html
+++ b/team6/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>My name is chantrea</h1>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">My Website</a>
@@ -32,7 +33,6 @@
     <footer class="bg-dark text-white text-center py-3">
         <p class="mb-0">&copy; 2025 My Website. All rights reserved.</p>
     </footer>
-    <h1>Hello!!! My name is chantrea in group 6</h1>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
