--- a/team6/index.html
+++ b/team6/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>my name is koemseang</p>
-    <p>my name is yon</p>
+   <h1>Hell my name is koemeang</h1>
+   <h1>Hell my name is yon</h1>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">My Website</a>
