--- a/team6/index.html
+++ b/team6/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Hello I'm comback</h1>
-   <h1>My name is yon</h1>
+    <p>My name is koemseang</p>
+    <p>My name is yon</p>
+   
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">My Website</a>
